[package]
name = "ct-sct"
version = "0.1.0"
description = """
A crate to encode or decode Signed Certificate Timestamps (SCTs) extension in X.509 certificates.
"""
authors = ["Raminder Singh"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/imor/ct-sct"
categories = ["cryptography", "data-structures", "encoding"]
keywords = ["crypto", "x509"]
readme = "README.md"
edition = "2021"
rust-version = "1.65"

[dependencies]
const-oid = { version = "0.9.2", features = ["db"]}
der = { version = "0.7.6", features = ["alloc"]}
x509-cert = "0.2"